<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".IcmActivity">

    <androidx.cardview.widget.CardView

        android:id="@+id/viewMan"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/Man"
        app:cardBackgroundColor="@color/backgroundItem"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/viewWoman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/Man"
                android:src="@drawable/ic_man"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Man"
                android:text="@string/Man"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewWoman"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/Man"
        app:cardBackgroundColor="@color/backgroundItemSelected"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMan"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/Woman"
                android:src="@drawable/ic_woman"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Woman"
                android:text="@string/Woman"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/backgroundItem"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMan">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Height"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/HeightNumber"
                android:textColor="@color/white"
                android:textSize="40sp"
                />
            <com.google.android.material.slider.RangeSlider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:contentDescription="@string/Range"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>